# backend/src/routes/bestsellersRouter.js
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import * as bestsellersController from "../controllers/bestsellersController.js";
+
+const bestsellersRouter = Router();
+
+bestsellersRouter.get("/", bestsellersController.getAllBestsellers);
+
+export default bestsellersRouter;
