# backend/src/routes/feedbacksRouter.js
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import * as feedbacksController from "../controllers/feedbacksController.js";
+
+const feedbacksRouter = Router();
+
+feedbacksRouter.get("/", feedbacksController.getAllFeedbacks);
+
+export default feedbacksRouter;
